--- a/styles.css
+++ b/styles.css
@@ -80,13 +80,13 @@ button {
 .calculator{
   background: var(--color-light-500);
   width: 90vw;
-  max-width: 255px;
-  /* height: auto; */
+  max-width: 310px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  padding: 1rem;
+  padding-top: 1.5rem;
+  padding-bottom: 2rem;
   border-radius: 5px;
   box-shadow:var(--box-shadow-1);
 }
@@ -108,18 +108,15 @@ button {
 
 .btn-container{
   display: flex;
-  /* width: 90%; */
   margin: 0 auto;
 
 }
 .btn-faixa-etaria{
-  /* width: 50%; */
-  font-size: .875rem;
+  font-size: 1rem;
   background: white;
   border: 2px solid transparent;
-  padding: .125rem 1.45rem;
-  /* transition: var(--transition); */
-  transition: all 2s linear;
+  padding: .25rem 1.75rem;
+  transition: all 1s linear;
 }
 
 #btn-crianca{
@@ -146,19 +143,20 @@ button {
 .field label{
   display: inline-block;
   color: var(--color-dark-500);
-  font-size: .85rem;
+  font-size: 1rem;
   margin-bottom: .35rem;
 }
 
 .field span{
     color: var(--color-dark-500);
-font-size: .75rem;
+font-size: .875rem;
+margin-left: .25rem;
 }
 .field input[type=number] {
   color: var(--color-dark-500);
   border: none;
   border-radius: 5px;
-  font-size: .9rem;
+  font-size: 1rem;
   padding: .35rem;
   transition: box-shadow .3s ease;
 }
@@ -199,9 +197,10 @@ input[type=number] {
 
 /* form alert (under input field)- wrong input value  */
 .alert-text {
-  font-size: .55rem;
+  font-size: .675rem;
   margin: 0;
   margin-top: .2rem;
+  margin-bottom: .2rem;
   padding: 0;
   color: var(--color-alert-danger);
   opacity: 0;
@@ -243,7 +242,7 @@ input[type=number] {
 
 .result-text{
   display: inline-block;
-  font-size: .725rem !important;
+  font-size: .825rem !important;
 }
 
 /* SUBMIT button */
@@ -255,7 +254,7 @@ input[type=number] {
   font-size: 1rem;
   letter-spacing: var(--letter-spacing);
   color:#fff;
-  margin-bottom: .25rem;
+  margin-bottom: .5rem;
  transition: all .3s linear;
 }
 
@@ -269,7 +268,7 @@ input[type=number] {
   height: 0;
   max-height: 10rem;
   border-radius: 5px;
-  font-size: .75rem;
+  font-size: .875rem;
   letter-spacing: var(--letter-spacing);
   opacity: 0;
   transition: all .3s linear;
@@ -326,7 +325,7 @@ input[type=number] {
   position: relative;
   height: auto;
   background: var(--color-light-500);
-  padding: 1.5rem;
+  padding: 2rem;
   border-radius: 5px;
 }
 
@@ -341,15 +340,15 @@ input[type=number] {
 
 #imc-board-result {
   font-weight: bolder;
-  font-size: .95rem;
+  font-size: 1rem;
 }
 
 .info-board p{
-  font-size: .785rem;
+  font-size: .875rem;
 }
 
 .info-board > p:nth-child(2){
-  font-size: .675rem;
+  font-size: .75rem;
 }
 
 .info-board p:nth-child(2) span{
